[package]
name = "audio_toolbox"
version = "0.1.0"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc4 = "*"
core_audio = { path = "../core_audio" }
core_audio_types = { path = "../core_audio_types" }
block = "*"